# subset2evaluate

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
data_other/: e2e_challenge.jsonl  persona_chat.jsonl  story_gen_wc.jsonl  sum_cnndm3_openai.jsonl  unieval_sumeval.jsonl
experiments/: 00-sync_cluster.sh  02-utils.sh  07-random_subset.py  08a-random_convergence_speed.py  08b-random_convergence.py  09a-kmeans.py  09b-kmeans_embd.py  09c-kmeans_true.py  10-decision_boundary.py  11-subset_cost.py  12a-illustration_base_irt.py  12b-illustration_move_irt.py  13-main_outputbased.py  13-main_outputbased_metrics_moment.py  14-main_outputbased_other.py  14-main_sourcebased.py  15-artificial_crowd.py  15-model_count_necessity.py  15a-system_count_necessity_fig.py  15b-system_count_necessity_tab.py  16-metric_quality_performance.py  16a-metric_quality_old.py  16b-metric_quality_precompute_clucor.py  16b-metric_quality_precompute_spa.py  16c-metric_quality_compute.py  16d-metric_quality_fig.py  17-quick_test.py  17b-metric_quality_precompute_clucor_summeval.py  17c-metric_quality_compute_summeval.py  17d-metric_quality_fig_summeval.py  18-fig_bernoulli_to_normal.py  19-quick_test.py  19-theta_consistency.py  20-plot_irt.py  21-cost_aware_selection.py  21-plot_characteristic_curve.py  22-main_sourcebased_metrics_moment.py  22-main_sourcebased_precomet.py  23-main_sourcebased_other.py  24-document_level.py  (+35 more)
experiments/irt_mt_dev/: README.md
experiments/irt_mt_dev/comparable_scores/: 01-initial_test.py  02-initial_test_baseline.py  03-more_accurate_scoring_test.py  04-more_accurate_scoring_test_baseline.py  README.md
experiments/irt_mt_dev/examples/: 01-tutorial.py  02-example_random.py
experiments/irt_mt_dev/irt/: base.py  basic.py  embd.py  mirt.py  scalar.py  tfidf.py  train_our.py  train_pyirt.py
experiments/irt_mt_dev/scripts/: 03-data_overview.py
experiments/irt_mt_dev/subset_selection/: 01-random_subset.py  02-random_convergence.py  02-random_convergence_speed.py  03-metric_heuristic.py  04-kmeans.py  04-kmeans_embd.py  04-kmeans_true.py  05-irt.py  06-decision_boundary.py  07-good_subset.py  07-stable_subset.py  08-subset_cost.py  10-bloomberg_misc.py  10b-google_move_irt.py  11-metric_heuristic_all.py  12-irt_all.py  12-main_outputbased_other.py  13-system_count_necessity.py  13a-system_count_necessity_fig.py  15-quick_comparison.ipynb  (+24 more)
experiments/old_irt/: base.py  embd.py  mirt.py  scalar.py  tfidf.py  train_our.py
irt_mt_dev/_old/: fig_metric_disagree.py  fig_metric_magnitude.py  fig_metric_magnitude_syswise.py  fig_metric_variance.py  fig_random_subset.py  test.py  utils.py
irt_mt_dev/comparable_scores/: 01-initial_test.py  01-test.py  02-initial_test_baseline.py  03-more_accurate_scoring_test.py  04-more_accurate_scoring_test_baseline.py
irt_mt_dev/figures/: 02-domain.py  02-random_convergence.py  02-random_convergence_speed.py  03-domain.py  03-irt.py  03-metric_top.py  04-kmeans.py  04-kmeans_embd.py  04-kmeans_true.py  05-irt.py  05-kmeans_embd.py  06-kmeans_true.py  06-metric_top.py  07-stable_subset.py  08-stable_subset.py
irt_mt_dev/irt/: 2pl_parameters.py  2pl_parameters_corr.py  basic.py  generate_pyirt.py  train.py  train_bloomberg.py  train_our.py  train_pyirt.py  trainpyirt.py  unused.ipynb
irt_mt_dev/irt_old/: basic.py  create_simple_corpus.py  train.py
irt_mt_dev/models/: basic.py
irt_mt_dev/peng/: 01-tutorial.py  02-example_random.py
irt_mt_dev/scripts/: 01-train_basic_irt.sh  02-train_subset_irt.sh
irt_mt_dev/subset_selection/: 01-random_subset.py  03-domain.py  03-metric_heuristic.py  03-metric_top.py  04-kmeans.py  04-kmeans_embd.py  04-kmeans_true.py  05-irt.py  06-decision_boundary.py  07-stable_subset.py  08-subset_cost.py  10-bloomberg_misc.py  10a-google_base_irt.py  11-metric_heuristic_all.py
irt_mt_dev/utils/: __init__.py  fig.py  utils.py
other_data/: emnlp_2017.jsonl  story_gen_roc.jsonl  sum_cnndm1_openai.jsonl  sum_dialsum.jsonl  sum_newsroom.jsonl  sumeval_gpt.jsonl
scripts/: 00-sync_cluster.sh  01-get_data.sh  02-resave_data.py  02-utils.sh
src/: fig_metric_disagree.py  fig_metric_magnitude.py  fig_metric_magnitude_syswise.py  fig_metric_variance.py  fig_random_subset.py
src-v1/: fig_metric_magnitude_syswise.py  fig_random_subset.py  utils.py
src-v2/: compute_itr.py  fig_active_learning.py  fig_domain.py  fig_kmeans.py  fig_kmeans_embd.py  fig_kmeans_fake.py  fig_kmeans_proto.py  fig_kmeans_proto_embd.py  fig_kmeans_true.py  fig_metric_magnitude.py  fig_metric_top.py  fig_random_subset.py  fig_stable_subset.py  itr_eval.py  tmp.py  tmp1.py  tmp2.py  utils.py
subset2evaluate/: __init__.py  evaluate.py  methods.py  methods_old.py  pyproject.toml  reference_info.py  select_subset.py  test.py  utils.py
subset2evaluate/subset2evaluate/: __init__.py  evaluate.py  methods.py  methods_old.py  select_subset.py  test.py  utils.py
web/: .gitignore  README.md
web/src/: package-lock.json  package.json  tsconfig.json  webpack.config.js
web/web/: web-source.js
(+48 files in other folders)
