[build-system]
requires = ["setuptools >= 65.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["subset2evaluate"]

# in case we want to change the local package dir
# [tool.setuptools.package-dir]
# subset2evaluate = "src"

[project]
name = "subset2evaluate"
version = "0.0.1a9"
description = "Find informative examples to efficiently (human-)evaluate NLG models."
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "Vilém Zouhar", email = "vilem.zouhar@gmail.com"},
]
keywords = ["evaluation", "natural language generation", "machine translation", "human evaluation", "subset selection"]
dependencies = [
  "numpy",
  "pandas",
  "sacrebleu",
  "datasets",
  "scikit-learn",
  "tqdm",
  "matplotlib",
  "requests",
  # "unbabel_comet @ git+https://github.com/zouharvi/PreCOMET.git",
  # "py_irt @ git+https://github.com/zouharvi/py-irt.git",
]

[project.urls]
Repository = "https://github.com/zouharvi/subset2evaluate"
Issues = "https://github.com/zouharvi/subset2evaluate/issues"

[project.scripts]
subset2evaluate = "subset2evaluate.select_subset:main_cli"
subset2evaluate-eval = "subset2evaluate.evaluate:main_cli"

# python3 -m build
# twine check dist/*
# python3 -m twine upload dist/* -u __token__