[build-system]
requires = ["setuptools >= 65.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["subset2evaluate"]

# in case we want to change the local package dir
# [tool.setuptools.package-dir]
# subset2evaluate = "src"

[project]
name = "subset2evaluate"
version = "1.0.8"
description = "Find informative examples to efficiently (human-)evaluate NLG models."
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "Vilém Zouhar", email = "vilem.zouhar@gmail.com"},
]
keywords = ["evaluation", "natural language generation", "machine translation", "human evaluation", "subset selection"]
dependencies = [
  "numpy",
  "pandas",
  "sacrebleu",
  "datasets",
  "scikit-learn",
  "tqdm",
  "matplotlib",
  "requests",
  "sentence-transformers",
  # "unbabel_comet @ git+https://github.com/zouharvi/PreCOMET.git",
  # "py_irt @ git+https://github.com/zouharvi/py-irt.git",
]
classifiers = [
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]

[project.urls]
Repository = "https://github.com/zouharvi/subset2evaluate"
Issues = "https://github.com/zouharvi/subset2evaluate/issues"

[project.scripts]
subset2evaluate = "subset2evaluate.select_subset:main_cli"
subset2evaluate-eval = "subset2evaluate.evaluate:main_cli"

# python3 -m build
# python3 -m twine upload dist/* -u __token__

# pip install -e . --config-settings editable_mode=strict