[build-system]
requires = ["setuptools >= 65.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["subset2evaluate"]

[project]
name = "subset2evaluate"
version = "0.0.0"
dependencies = [
  "numpy",
  "torch",
  "lightning",
]
requires-python = ">=3.11"
authors = [
  {name = "Vilém Zouhar", email = "vilem.zouhar@gmail.com"},
]